# wordlist-genrator

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  styles.css  wordlist_cli.py  wordlist_cli_app.py  wordlist_engine.py
js/: app.js  constants.js  generator.js  ui.js  utils.js  worker.js
offline-cli/: README.md  wordlist_cli.py  wordlist_cli_app.py  wordlist_engine.py  wordlist_utils.py
